Name:                fedora-haskell-tools
Version:             0.6
Synopsis:            Building and maintenance tools for Fedora Haskell
Description:
    Tools for building and managing Fedora Haskell packages.
Homepage:            https://github.com/fedora-haskell/fedora-haskell-tools
Bug-reports:         https://github.com/fedora-haskell/fedora-haskell-tools/issues
License:             GPL-3
License-file:        COPYING
Author:              Jens Petersen <petersen@fedoraproject.org>
Maintainer:          Jens Petersen <petersen@fedoraproject.org>
Copyright:           2014-2017 Jens Petersen <petersen@fedoraproject.org>
Category:            Distribution
Build-type:          Simple
Extra-source-files:  README.md TODO ChangeLog
Cabal-version:       >=1.6

source-repository head
  type:     git
  location: https://github.com/fedora-haskell/fedora-haskell-tools

Executable fhbuild
    Main-is:       fhbuild.hs
    Build-depends: base < 5,
                   directory,
                   fedora-dists,
                   filepath,
                   process,
                   simple-cmd >= 0.1.1,
                   time < 1.9,
                   unix
    Hs-Source-Dirs: src, .
    Other-modules: Koji, RPM, Utils
    GHC-options:   -fwarn-missing-signatures -Wall
    Extensions:    CPP

Executable fhbz
    Main-is:       fhbz.hs
    Build-depends: base < 5,
                   fedora-dists,
                   time
    Hs-Source-Dirs: src, .
    Other-modules: Koji, RPM, Utils
    GHC-options:   -fwarn-missing-signatures -Wall
    Extensions:    CPP

Executable fhpkg
    Main-is:       fhpkg.hs
    Build-depends: base < 5,
                   csv,
                   directory,
                   fedora-dists,
                   filepath,
                   HTTP,
                   process,
                   simple-cmd >= 0.1.1,
                   time < 1.9,
                   unix
    if impl(ghc<8.0)
        Build-depends: semigroups
    Hs-Source-Dirs: src, .
    Other-modules: Koji,
                   RPM,
                   Utils
    GHC-options:   -fwarn-missing-signatures -Wall
    Extensions:    CPP

Executable fhmock
    Main-is:       fhmock.hs
    Build-depends: base < 5,
                   fedora-dists,
                   optparse-simple,
                   process,
                   simple-cmd >= 0.1.1
    Hs-Source-Dirs: src, .
    Other-modules: Utils, Paths_fedora_haskell_tools
    GHC-options:   -fwarn-missing-signatures -Wall
    Extensions:    CPP

Executable fhcontainer
    Main-is:       fhcontainer.hs
    Build-depends: base < 5, fedora-dists, optparse-simple, process, simple-cmd
    Hs-Source-Dirs: src, .
    Other-modules: Utils, Paths_fedora_haskell_tools
    GHC-options:   -fwarn-missing-signatures -Wall
    Extensions:    CPP
