Name:                fedora-haskell-tools
Version:             1.2
Synopsis:            Building and maintenance tools for Fedora Haskell
Description:
    Maintainer tools for building and managing Fedora Haskell packages.
Homepage:            https://github.com/fedora-haskell/fedora-haskell-tools
Bug-reports:         https://github.com/fedora-haskell/fedora-haskell-tools/issues
License:             GPL-3
License-file:        COPYING
Author:              Jens Petersen <petersen@fedoraproject.org>
Maintainer:          Jens Petersen <petersen@fedoraproject.org>
Copyright:           2014-2026 Jens Petersen <petersen@fedoraproject.org>
Category:            Distribution
Build-type:          Simple
Extra-source-files:  README.md TODO ChangeLog
Cabal-version:       >=1.10
Tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4,
                     GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.8, GHC == 9.4.8,
                     GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.3, GHC == 9.12.3

source-repository head
  type:     git
  location: https://github.com/fedora-haskell/fedora-haskell-tools

Executable fhpkg
    Main-is:       fhpkg.hs
    Build-depends: base >= 4.6 && < 5,
                   bytestring,
                   csv,
                   directory,
                   extra,
                   fedora-releases,
                   filepath,
                   http-conduit >= 2.3.2,
                   http-types,
                   optparse-applicative,
                   process,
                   simple-cmd >= 0.2.0,
                   simple-cmd-args >= 0.1.6,
                   simple-prompt,
                   split,
                   time,
                   unix
    Hs-Source-Dirs: src, .
    Other-modules: Paths_fedora_haskell_tools
                   Utils
                   RPM
    GHC-options:   -fwarn-missing-signatures -Wall
    Default-Language: Haskell98

Executable fhbz
    Main-is:       fhbz.hs
    Build-depends: base < 5,
                   directory,
                   fedora-releases,
                   filepath,
                   process,
                   simple-cmd,
                   simple-cmd-args,
                   time
    Hs-Source-Dirs: src, .
    Other-modules: RPM, Utils
    GHC-options:   -fwarn-missing-signatures -Wall
    Default-Language: Haskell98
